Mudança docs view.gui